--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,7 +17,9 @@
 
 # Makefile.am: Input file for automake
 
-bin_PROGRAMS = shmcat ftok
+bin_PROGRAMS = shmcat $(FTOK)
+EXTRA_PROGRAMS = ftok
+
 shmcat_SOURCES = filedumper.c filedumper.h gettext.h \
 		 shmcat.c printtext.c printtext.h \
 		 shmdumper.c shmdumper.h status.h translate.h
