Integrate translated man pages into build system
The Midnight Commander sources (see: https://www.midnight-commander.org/
I used 4.8.1) have been a big help here. Thanks to the team here!

In the future we should also support the LINGUAS variable, just like the
Midnight Commander package does, but this is not that important right
now.

--- a/man/de/Makefile.am
+++ b/man/de/Makefile.am
@@ -17,13 +17,8 @@
 
 # Makefile.am: Input file for automake
 
-MAN_TRANSLATIONS = de
-
-if USE_NLS
-SUBDIRS = $(MAN_TRANSLATIONS)
-endif
-
-DIST_SUBDIRS = $(MAN_TRANSLATIONS)
+LANG=de
+mandir = @mandir@/$(LANG)
 
 man1_MANS = shmcat.man $(FTOK_MAN)
 EXTRA_DIST = shmcat.man ftok.man
