--- a/configure.ac
+++ b/configure.ac
@@ -70,4 +70,7 @@ AS_IF([test "x$enable_big_buffer" != "xno"],
 AM_GNU_GETTEXT
 AM_GNU_GETTEXT_VERSION(0.17)
 
-AC_OUTPUT(Makefile intl/Makefile man/Makefile po/Makefile.in src/Makefile)
+dnl Define USE_NLS conditional to determine if we have to install translated man pages.
+AM_CONDITIONAL(USE_NLS, [test "x$USE_NLS" = "xyes"])
+
+AC_OUTPUT(Makefile intl/Makefile man/Makefile man/de/Makefile po/Makefile.in src/Makefile)
