src/Makefile.am: Use included gettext correctly
Add intl/ directory to include search path and add libintl to the
libraries used. Otherwise compiling fails on FreeBSD (and probably other
systems that do not use glibc) when the included libintl should be used.

Fixes Ticket #11.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,6 +17,9 @@
 
 # Makefile.am: Input file for automake
 
+AM_CPPFLAGS = -I$(top_srcdir)/intl
+LDADD = @LIBINTL@
+
 bin_PROGRAMS = shmcat $(FTOK)
 EXTRA_PROGRAMS = ftok
 
