--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,11 +24,11 @@ bin_PROGRAMS = shmcat $(FTOK)
 EXTRA_PROGRAMS = ftok
 
 shmcat_SOURCES = filedumper.c filedumper.h gettext.h \
-		 shmcat.c printtext.c printtext.h \
+		 keythelper.h shmcat.c printtext.c printtext.h \
 		 shmdumper.c shmdumper.h status.h translate.h
 shmcat_LDADD = @SHMCAT_EXTRA_LIBS@ @LIBINTL@
 
-ftok_SOURCES = ftok.c gettext.h translate.h
+ftok_SOURCES = ftok.c gettext.h keythelper.h translate.h
 
 datadir = @datadir@
 localedir = $(datadir)/locale
