configure.ac: Switch to tar.xz for future releases
More and more projects are releasing their distribution archives as
xz-compressed archives, like the Linux kernel [1] and GNU coreutils [2],
so it should be widespread enough. And of course, it offers a better
compression ratio, too.

[1] https://www.kernel.org/happy-new-year-and-good-bye-bzip2.html
[2] http://ftp.gnu.org/gnu/coreutils/

--- a/configure.ac
+++ b/configure.ac
@@ -23,7 +23,7 @@ AC_INIT(shmcat, 1.8, sgdev at arcor dot de)
 AM_CONFIG_HEADER(config.h)
 AC_LANG(C)
 
-AM_INIT_AUTOMAKE([dist-bzip2 1.11])
+AM_INIT_AUTOMAKE([dist-xz 1.11])
 AM_SILENT_RULES([yes])
 
 AM_SANITY_CHECK
